@@ -1,3 +1,4 @@
+* Add no_boolean Flavor
 * Add converter format2numeric
 * Add rownum limit style
 * Add no_as Flavor
